fix padding for image captions on iPhone

--- a/app/assets/stylesheets/partials/_media.css.sass
+++ b/app/assets/stylesheets/partials/_media.css.sass
@@ -317,7 +317,7 @@
   .image-caption-text
     display: block
     float: none
-    padding: 1em 0 0 0
+    padding: 1em 0
     & > *
       padding: 0 $margin-side
     .wide &, &
